# POLARIS_GEM_e2_MANAGER

./: Dockerfile  README.md  run_container.sh
core/: CMakeLists.txt  package.xml
core/include/core/: publisher.hpp  subscriber.hpp
gem_manager/: CMakeLists.txt  package.xml
gem_manager/gem_planner/include/gem_planner/: planner.hpp
gem_manager/gem_planner/include/gem_planner/controllers/: path_tracking_controller.hpp  pure_pursuit.hpp  stanley.hpp
gem_manager/gem_planner/msg/: Waypoint.msg  WaypointsBatch.msg
gem_manager/gem_planner/src/: planner.cpp  planner_node.cpp
gem_manager/gem_planner/src/controllers/: pure_pursuit.cpp  stanley.cpp
gem_manager/gem_state_manager/include/gem_state_manager/: callback_handlers.hpp  events.hpp  state_manager.hpp
gem_manager/gem_state_manager/include/gem_state_manager/states/: robot_state.hpp
gem_manager/gem_state_manager/src/: callback_handlers.cpp  state_manager.cpp  state_manager_node.cpp
gem_manager/gem_state_manager/src/states/: error.cpp  idle.cpp  running.cpp
gem_manager/launch/: polaris_manager_simulation.launch
gem_mock_sensors/: CMakeLists.txt  package.xml
gem_mock_sensors/src/: battery_node.cpp  emergency_stop_node.cpp  gem_mock_sensors_node.cpp  gps_node.cpp  signal_node.cpp  temperature_node.cpp
gem_state_manager/: CMakeLists.txt  package.xml
gem_state_manager/include/gem_state_manager/: callback_handlers.hpp  state_manager.hpp
gem_state_manager/include/gem_state_manager/states/: error.hpp  idle.hpp  running.hpp
gem_state_manager/src/: callback_handlers.cpp  gem_state_manager_node.cpp  state_manager.cpp  state_manager_node.cpp
gem_state_manager/src/states/: error.cpp  idle.cpp  running.cpp
path_tracking_controllers/pure_pursuit/: CMakeLists.txt  package.xml  pure_pursuit_sim.py
path_tracking_controllers/stanley/: CMakeLists.txt  package.xml  stanley_sim.py
ros1_lib/: CMakeLists.txt  package.xml
ros1_lib/include/ros1_lib/: publisher.hpp  subscriber.hpp
