<?xml version="1.0"?>
<package format="2">
 <name>gem_manager</name>
 <version>1.0.0</version>
 <description>The gem_manager package</description>
 <author email="matzarapisg@outlook.com.gr">Georgios Matzarapis</author>
 <maintainer email="matzarapisg@outlook.com.gr">Georgios Matzarapis</maintainer>
 <url type="website">https://github.com/georgiosmatzarapis/POLARIS_GEM_e2_MANAGER.git</url>
 <license>MIT</license>
 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>roslib</build_depend>
 <build_depend>message_generation</build_depend>
 <build_depend>ros1_lib</build_depend>
 <build_export_depend>roscpp</build_export_depend>
 <build_export_depend>std_msgs</build_export_depend>
 <build_export_depend>roslib</build_export_depend>
 <build_export_depend>ros1_lib</build_export_depend>
 <exec_depend>roscpp</exec_depend>
 <exec_depend>std_msgs</exec_depend>
 <exec_depend>roslib</exec_depend>
 <exec_depend>message_runtime</exec_depend>
 <exec_depend>ros1_lib</exec_depend>
</package>
